--- a/build.gradle
+++ b/build.gradle
@@ -3,31 +3,31 @@ buildscript {
     ext {
 
         // global variables
-        kotlin_version = '1.5.30'
+        kotlin_version = '1.3.61'
 
         // local variables (use def)
         def androidx_ktx_version = '1.6.0'
-        def androidx_test_version = '1.4.0'
-        def appcompat_version = '1.3.1'
+        def androidx_test_version = '1.3.1'
+        def appcompat_version = '1.1.0'
         def constraint_layout_version = '2.1.0'
-        def coroutines_android_version = '1.5.2-native-mt'
-        def expresso_version = '3.4.0'
-        def gson_version = '2.8.8'
-        def junit_version = '4.13.2'
+        def coroutines_android_version = '1.3.2'
+        def expresso_version = '3.2.0'
+        def gson_version = '2.8.6'
+        def junit_version = '4.12'
         def lifecycle_version = '2.1.0'
-        def livedata_version = '2.4.0-alpha03'
+        def livedata_version = '2.2.0-rc02'
         def material_version = '1.4.0'
-        def retrofit_gson_version = '2.9.0'
-        def retrofit_version = '2.9.0'
-        def truth_version = '1.1.3'
-        def room_version = '2.3.0'
-        def work_version = '2.6.0'
+        def retrofit_gson_version = '2.6.2'
+        def retrofit_version = '2.6.2'
+        def truth_version = '1.0'
+        def room_version = '2.2.2'
+        def work_version = '2.2.0'
 
-        def dagger_hilt ='2.38.1'
+       /* def dagger_hilt ='2.38.1'
         def hilt_lifecycle_viewmodel ='1.0.0-alpha03'
         def hilt_navigation_compose ='1.0.0-alpha03'
         def hilt_android_compiler ='2.37'
-        def hilt_compiler ='1.0.0'
+        def hilt_compiler ='1.0.0'*/
 
         libraries = [
                 // Kotlin standard library
@@ -57,17 +57,10 @@ buildscript {
                 "com.google.code.gson:gson:$gson_version",
                 "com.squareup.retrofit2:converter-gson:$retrofit_gson_version",
                 "com.squareup.retrofit2:retrofit:$retrofit_version",
-
-                //Dagger - Hilt
-                "com.google.dagger:hilt-android:$dagger_hilt",
-                "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel",
-                "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose",
         ]
 
         librariesKapt = [
-                "androidx.room:room-compiler:$room_version",
-                "com.google.dagger:hilt-android-compiler:$hilt_android_compiler",
-                "androidx.hilt:hilt-compiler:$hilt_compiler",
+               // "androidx.room:room-compiler:$room_version",
         ]
 
         librariesDebug = [
