--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,14 @@ buildscript {
     ext {
 
         // global variables
+        package_name = 'com.aravindh.androidcore'
         kotlin_version = '1.3.61'
+        java_version = JavaVersion.VERSION_11
+        compile_sdk_verion = 30
+        min_sdk_verion = 21
+        target_sdk_verion = 30
+        version_code = 1
+        version_name = '1.0'
 
         // local variables (use def)
         def androidx_ktx_version = '1.6.0'
@@ -19,15 +26,18 @@ buildscript {
         def material_version = '1.4.0'
         def retrofit_gson_version = '2.6.2'
         def retrofit_version = '2.6.2'
+        def retrofit_logging_interceptor = '4.7.2'
         def truth_version = '1.0'
-        def room_version = '2.2.2'
+        def room_version = '2.2.5'
         def work_version = '2.2.0'
+        def nav_version = '2.3.5'
+        def glide_version = '4.11.0'
+        def sdp_android ='1.0.6'
 
-       /* def dagger_hilt ='2.38.1'
-        def hilt_lifecycle_viewmodel ='1.0.0-alpha03'
-        def hilt_navigation_compose ='1.0.0-alpha03'
-        def hilt_android_compiler ='2.37'
-        def hilt_compiler ='1.0.0'*/
+        def hilt_android = '2.31.2-alpha'
+        def hilt_lifecycle_viewmodel = '1.0.0-alpha03'
+        def hilt_compiler = '1.0.0'
+
 
         libraries = [
                 // Kotlin standard library
@@ -48,19 +58,43 @@ buildscript {
                 "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
                 "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
 
-                "androidx.work:work-runtime-ktx:$work_version",
-
-                // Room for database
-                "androidx.room:room-ktx:$room_version",
-
                 // network & serialization
                 "com.google.code.gson:gson:$gson_version",
                 "com.squareup.retrofit2:converter-gson:$retrofit_gson_version",
                 "com.squareup.retrofit2:retrofit:$retrofit_version",
+                "com.squareup.okhttp3:logging-interceptor:$retrofit_logging_interceptor",
+
+                //Room
+                "androidx.room:room-runtime:$room_version",
+                "androidx.room:room-ktx:$room_version",
+
+                //Navigation
+                "androidx.navigation:navigation-fragment-ktx:$nav_version",
+                "androidx.navigation:navigation-ui-ktx:$nav_version",
+
+                //Hilt
+                "com.google.dagger:hilt-android:$hilt_android",
+                "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_lifecycle_viewmodel",
+
+                //Navigation
+                "androidx.navigation:navigation-fragment-ktx:$nav_version",
+                "androidx.navigation:navigation-ui-ktx:$nav_version",
+
+                //Glide
+                "com.github.bumptech.glide:glide:$glide_version",
+
+                //SDP Library for handling all screen sizes
+                "com.intuit.sdp:sdp-android:$sdp_android",
         ]
 
-        librariesKapt = [
-               // "androidx.room:room-compiler:$room_version",
+        librariesAnnotationProcessor = [
+                //Room
+                "androidx.room:room-compiler:$room_version",
+                //Hilt
+                "com.google.dagger:hilt-android-compiler:$hilt_android",
+                "androidx.hilt:hilt-compiler:$hilt_compiler",
+                //Glide
+                "com.github.bumptech.glide:compiler:$glide_version"
         ]
 
         librariesDebug = [
@@ -106,6 +140,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
