--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         def androidx_test_version = '1.3.1'
         def appcompat_version = '1.1.0'
         def constraint_layout_version = '2.1.0'
+        def legacy_support ='1.0.0'
         def coroutines_android_version = '1.3.2'
         def expresso_version = '3.2.0'
         def gson_version = '2.8.6'
@@ -52,6 +53,7 @@ buildscript {
                 "androidx.appcompat:appcompat:$appcompat_version",
                 "com.google.android.material:material:$material_version",
                 "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
+                "androidx.legacy:legacy-support-v4:$legacy_support",
 
                 // ViewModel and LiveData
                 "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
