--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
         def retrofit_version = '2.6.2'
         def retrofit_logging_interceptor = '4.7.2'
         def truth_version = '1.0'
-        def room_version = '2.2.5'
+        def room_version = '2.4.0-alpha03'
         def work_version = '2.2.0'
         def nav_version = '2.3.5'
         def glide_version = '4.11.0'
