dependencies.gradle file created to separate the third party dependencies version config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
 }
 
+apply from: '../gradle/dependencies.gradle'
+
 android {
     compileSdk compile_sdk_verion
 
@@ -42,7 +44,7 @@ android {
     dataBinding {
         enabled = true
     }
-    
+
     buildFeatures {
         viewBinding true
     }
