--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -58,7 +58,7 @@ ext {
             "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
             "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
 
-            // network & serialization
+            /*// network & serialization
             "com.google.code.gson:gson:$gson_version",
             "com.squareup.retrofit2:converter-gson:$retrofit_gson_version",
             "com.squareup.retrofit2:retrofit:$retrofit_version",
@@ -83,21 +83,21 @@ ext {
             "com.github.bumptech.glide:glide:$glide_version",
 
             //SDP Library for handling all screen sizes
-            "com.intuit.sdp:sdp-android:$sdp_android",
+            "com.intuit.sdp:sdp-android:$sdp_android",*/
     ]
 
     librariesAnnotationProcessor = [
-            //Room
+           /* //Room
             "androidx.room:room-compiler:$room_version",
             //Hilt
             "com.google.dagger:hilt-android-compiler:$hilt_android",
             "androidx.hilt:hilt-compiler:$hilt_compiler",
             //Glide
-            "com.github.bumptech.glide:compiler:$glide_version"
+            "com.github.bumptech.glide:compiler:$glide_version"*/
     ]
 
     librariesDebug = [
-            "com.google.truth:truth:$truth_version",
+
     ]
 
     testLibraries = [
@@ -108,9 +108,6 @@ ext {
 
             // mocks
             'org.mockito:mockito-core:3.12.4',
-
-            //  Architecture Components testing libraries
-            "androidx.arch.core:core-testing:$lifecycle_version"
     ]
 
     androidTestLibraries = [
@@ -122,10 +119,6 @@ ext {
             "androidx.test.espresso:espresso-core:$expresso_version",
             "androidx.test.espresso:espresso-contrib:$expresso_version",
             "androidx.test.espresso:espresso-intents:$expresso_version",
-
-            //  Architecture Components testing libraries
-            "androidx.arch.core:core-testing:$lifecycle_version",
-            "androidx.work:work-testing:$work_version",
 
             // Coroutines testing
             "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_android_version",
