--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
 
     // global variables
-    package_name = 'com.aravindh.androidcore'
+    package_name = 'com.aravindh.foody'
     kotlin_version = '1.3.61'
     java_version = JavaVersion.VERSION_11
     compile_sdk_verion = 33
