--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,14 +11,14 @@ plugins {
 apply from: '../gradle/dependencies.gradle'
 
 android {
-    compileSdk compile_sdk_verion
+    compileSdk 32
 
     defaultConfig {
-        applicationId package_name
-        minSdk min_sdk_verion
-        targetSdk target_sdk_verion
-        versionCode version_code
-        versionName version_name
+        applicationId "com.aravindh.foody"
+        minSdk 21
+        targetSdk 32
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -31,23 +31,16 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = java_version
-        targetCompatibility = java_version
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
-        jvmTarget = java_version
-    }
-
-    kapt {
-        correctErrorTypes true
-    }
-
-    dataBinding {
-        enabled = true
+        jvmTarget = '1.8'
     }
 
     buildFeatures {
-        viewBinding true
+        dataBinding true
     }
 }
 
@@ -60,20 +53,16 @@ dependencies {
     testImplementation testLibraries
     androidTestImplementation androidTestLibraries*/
 
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.10"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Coordinator Layout
-    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
-
-    // Material Components
-    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
 
     // Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
@@ -86,8 +75,8 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:2.4.3"
 
     // Data binding
-    kapt "com.android.databinding:compiler:3.2.0-alpha10"
-    kapt "androidx.databinding:databinding-common:7.3.0"
+    annotationProcessor "com.android.databinding:compiler:3.2.0-alpha10"
+    annotationProcessor "androidx.databinding:databinding-common:7.3.0"
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
