--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,9 @@ plugins {
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
-    id 'androidx.navigation.safeargs.kotlin'
 }
 
-apply from: '../gradle/dependencies.gradle'
+apply from: '../dependencies.gradle'
 
 android {
     compileSdk compile_sdk_verion
