--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext {
     version_name = '1.0'
 
     // local variables (use def)
-    def androidx_ktx_version = '1.6.0'
+    def androidx_ktx_version = '1.8.0'
     def androidx_test_version = '1.3.1'
     def appcompat_version = '1.1.0'
     def constraint_layout_version = '2.1.0'
@@ -34,13 +34,12 @@ ext {
     def sdp_android = '1.0.6'
 
     def hilt_android = '2.38.1'
-    def hilt_lifecycle_viewmodel = '1.0.0-alpha03'
     def hilt_compiler = '1.0.0'
 
 
     libraries = [
             // Kotlin standard library
-            "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}",
+            //"org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}",
 
             // Coroutines
             "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version",
@@ -53,10 +52,20 @@ ext {
             "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
             "androidx.legacy:legacy-support-v4:$legacy_support",
 
-            // ViewModel and LiveData
+            //SDP Library for handling all screen sizes
+            "com.intuit.sdp:sdp-android:$sdp_android",
+
+            //Hilt
+            "com.google.dagger:hilt-android:$hilt_android",
+
+            //Glide
+            "com.github.bumptech.glide:glide:$glide_version",
+
+
+            /*// ViewModel and LiveData
             "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
-            "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
-            "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+            //"androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
+
 
             // network & serialization
             "com.google.code.gson:gson:$gson_version",
@@ -72,18 +81,11 @@ ext {
             "androidx.navigation:navigation-fragment-ktx:$nav_version",
             "androidx.navigation:navigation-ui-ktx:$nav_version",
 
-            //Hilt
-            "com.google.dagger:hilt-android:$hilt_android",
-
             //Navigation
             "androidx.navigation:navigation-fragment-ktx:$nav_version",
             "androidx.navigation:navigation-ui-ktx:$nav_version",
 
-            //Glide
-            "com.github.bumptech.glide:glide:$glide_version",
-
-            //SDP Library for handling all screen sizes
-            "com.intuit.sdp:sdp-android:$sdp_android",
+           */
     ]
 
     librariesAnnotationProcessor = [
