--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,10 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = java_version
-        targetCompatibility = java_version
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = java_version
     }
