--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,7 +2,7 @@ ext {
 
     // global variables
     package_name = 'com.aravindh.androidcore'
-    kotlin_version = '1.3.61'
+    kotlin_version = '1.8.10'
     java_version = JavaVersion.VERSION_11
     compile_sdk_verion = 33
     min_sdk_verion = 21
@@ -11,7 +11,7 @@ ext {
     version_name = '1.0'
 
     // local variables (use def)
-    def androidx_ktx_version = '1.8.0'
+    def androidx_ktx_version = '1.9.0'
     def androidx_test_version = '1.3.1'
     def appcompat_version = '1.1.0'
     def constraint_layout_version = '2.1.0'
@@ -33,13 +33,17 @@ ext {
     def glide_version = '4.11.0'
     def sdp_android = '1.0.6'
 
-    def hilt_android = '2.38.1'
+    def hilt_android = '2.45'
     def hilt_compiler = '1.0.0'
 
 
     libraries = [
             // Kotlin standard library
             //"org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}",
+
+            "androidx.fragment:fragment-ktx:1.5.5",
+            "androidx.lifecycle:lifecycle-extensions:2.2.0",
+
 
             // Coroutines
             "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version",
@@ -61,10 +65,9 @@ ext {
             //Glide
             "com.github.bumptech.glide:glide:$glide_version",
 
-
-            /*// ViewModel and LiveData
-            "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
-            //"androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
+            // ViewModel and LiveData
+            "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
+            'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0',
 
 
             // network & serialization
@@ -80,12 +83,6 @@ ext {
             //Navigation
             "androidx.navigation:navigation-fragment-ktx:$nav_version",
             "androidx.navigation:navigation-ui-ktx:$nav_version",
-
-            //Navigation
-            "androidx.navigation:navigation-fragment-ktx:$nav_version",
-            "androidx.navigation:navigation-ui-ktx:$nav_version",
-
-           */
     ]
 
     librariesAnnotationProcessor = [
