--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.46.1'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0"
 
 
         // NOTE: Do not place your application dependencies here; they belong
