--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,7 +13,7 @@ ext {
     // local variables (use def)
     def androidx_ktx_version = '1.8.0'
     def androidx_test_version = '1.3.1'
-    def appcompat_version = '1.1.0'
+    def appcompat_version = '1.6.1'
     def constraint_layout_version = '2.1.0'
     def legacy_support = '1.0.0'
     def coroutines_android_version = '1.3.2'
@@ -62,9 +62,9 @@ ext {
             "com.github.bumptech.glide:glide:$glide_version",
 
 
-            /*// ViewModel and LiveData
+            // ViewModel and LiveData
             "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
-            //"androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
+            "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_version",
 
 
             // network & serialization
@@ -85,7 +85,6 @@ ext {
             "androidx.navigation:navigation-fragment-ktx:$nav_version",
             "androidx.navigation:navigation-ui-ktx:$nav_version",
 
-           */
     ]
 
     librariesAnnotationProcessor = [
