--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,6 @@ kapt.use.worker.api=false
 kapt.include.compile.classpath=false
 kapt.incremental.apt=true
 org.gradle.unsafe.configuration-cache=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
